src/syntax/parse/snapshots/dilaria__syntax__parse__test__assignment__simple.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Assignment(
    Assignment {
        span: Span(
            0..0,
        ),
        lhs: Ident(
            Ident {
                sym: "hugo",
                span: Span(
                    0..0,
                ),
            },
        ),
        rhs: Literal(
            Number(
                10.0,
                Span(
                    0..0,
                ),
            ),
        ),
    },
)
